﻿PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 20??, PHP 5.3.5
- Upgraded bundled Sqlite3 to version 3.7.4. (Ilia)

- Zend Engine:
  . Indirect reference to $this fails to resolve if direct $this is never used
    in method. (Scott)

- Filter extension:
  . Fixed bug #53150 (FILTER_FLAG_NO_RES_RANGE is missing some IP ranges).
    (Ilia)
    
- Intl extension:
  . Fixed bug #53512 (NumberFormatter::setSymbol crash on bogus $attr values).
    (Felipe)

- MySQL Improved extension:
  . Fixed bug #53503 (mysqli::query returns false after successful LOAD DATA 
    query). (Kalle)
  . Fixed bug #53425 (mysqli_real_connect() ignores client flags when built to 
    call libmysql). (Kalle, tre-php-net at crushedhat dot com)

- PDO Oracle driver:
  . Fixed bug #39199 (Cannot load Lob data with more than 4000 bytes on
    ORACLE 10). (spatar at mail dot nnov dot ru)
    
- PDO PostgreSQL driver:
  . Fixed bug #53517 (segfault in pgsql_stmt_execute() when postgres is down).
    (gyp at balabit dot hu)
    
- SPL extension:
  . Fixed bug #53515 (property_exists incorrect on ArrayObject null and 0
    values). (Felipe)

- Streams
  . Implemented FR #26158 (open arbitrary file descriptor with fopen)

09 Dec 2010, PHP 5.3.4
- Upgraded bundled Sqlite3 to version 3.7.3. (Ilia)
- Upgraded bundled PCRE to version 8.10. (Ilia)

- Security enhancements:
  . Fixed crash in zip extract method (possible CWE-170). 
    (Maksymilian Arciemowicz, Pierre)
  . Paths with NULL in them (foo\0bar.txt) are now considered as invalid. (Rasmus)
  . Fixed a possible double free in imap extension (Identified by Mateusz 
    Kocielski). (CVE-2010-4150). (Ilia)
  . Fixed NULL pointer dereference in ZipArchive::getArchiveComment.
    (CVE-2010-3709). (Maksymilian Arciemowicz)
  . Fixed possible flaw in open_basedir (CVE-2010-3436). (Pierre)